--- a/app/index.html
+++ b/app/index.html
@@ -15,12 +15,26 @@
       <h1>YadaGuru</h1>
       <h2>College Application Reminders</h2>
     </header>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8">
+          <div ng-include="'templates/main.html'">
+          </div>
+        </div>
+        <div class="col-md-4">
+          <alerts></alerts>
+        </div>
+      </div>
+    </div>
     <main>
       {{testData}}
     </main>
   </body>
   
   <script src="./bower_components/angularjs/angular.js"></script>
+  <script src="./bower_components/angular-animate/angular-animate.js"></script>
+  <script src="./bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+  <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="./app.js"></script>
   <script src="./js/controllers.js"></script>
 
