Added routing for express Setup support for push to Heroku for testing and limited sharing Added some html 5 boilerplate code to index

--- a/yadaApp/index.html
+++ b/yadaApp/index.html
@@ -1,12 +1,11 @@
-<!DOCTYPE html5>
-<html ng-app="app">
+<!DOCTYPE html>
+<html class="no-js" lang="">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" />
-    <meta name="viewport" />
-    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1,
-      minimum-scale=1, user-scalable=no, IE=edge, chrome=1" />
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>YadaGuru</title>
+
     <link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./css/main.css">
   </head>
@@ -35,7 +34,7 @@
   <script src="./bower_components/angular-animate/angular-animate.js"></script>
   <script src="./bower_components/angular-bootstrap/ui-bootstrap.js"></script>
   <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
-  <script src="./app.js"></script>
+  <script src="./yadaApp.js"></script>
   <script src="./js/controllers.js"></script>
 
   <script src="./common/common.js"></script>
