Continues building of front end

--- a/yadaApp/index.html
+++ b/yadaApp/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html class="no-js" lang="" ng-app="yadaApp">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -25,9 +25,6 @@
         </div>
       </div>
     </div>
-    <main>
-      {{testData}}
-    </main>
   </body>
   
   <script src="./bower_components/angularjs/angular.js"></script>
@@ -36,6 +33,8 @@
   <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="./yadaApp.js"></script>
   <script src="./js/controllers.js"></script>
+  <script src="./js/services.js"></script>
+  <script src="./js/services/testData.js"></script>
 
   <script src="./common/common.js"></script>
   <script src="./common/services/alerting.js"></script>
