Creates Utils services. Moves groupBy function from main controller to Utils service

--- a/yadaApp/index.html
+++ b/yadaApp/index.html
@@ -35,6 +35,7 @@
   <script src="./js/controllers.js"></script>
   <script src="./js/services.js"></script>
   <script src="./js/services/testData.js"></script>
+  <script src="./js/services/utils.js"></script>
 
   <script src="./common/common.js"></script>
   <script src="./common/services/alerting.js"></script>
