Added some very basic bootstrap styling

--- a/yadaApp/index.html
+++ b/yadaApp/index.html
@@ -10,10 +10,10 @@
     <link rel="stylesheet" href="./css/main.css">
   </head>
   <body ng-controller="mainCtrl">
-    <header>
+    <div class="page-header">
       <h1>YadaGuru</h1>
       <h2>College Application Reminders</h2>
-    </header>
+    </div>
     <div class="container">
       <div class="row">
         <div class="col-md-8">
@@ -40,4 +40,6 @@
   <script src="./common/common.js"></script>
   <script src="./common/services/alerting.js"></script>
   <script src="./common/directives/alerts.js"></script>
+  
+  <script src="./bower_components/jquery/dist/jquery.min.js"></script>
 </html>
