--- a/yadaApp/index.html
+++ b/yadaApp/index.html
@@ -11,8 +11,8 @@
   </head>
   <body ng-controller="mainCtrl">
     <div class="page-header">
-      <h1>YadaGuru</h1>
-      <h2>College Application Reminders</h2>
+      <h1 class="text-center">YadaGuru</h1>
+      <h2 class="text-center">College Application Reminders</h2>
     </div>
     <div>
       <alerts></alerts>
