--- a/yadaApp/index.html
+++ b/yadaApp/index.html
@@ -26,6 +26,7 @@
   </body>
   
   <script src="./bower_components/angularjs/angular.js"></script>
+  <script src="./bower_components/angular-route/angular-route.js"></script>
   <script src="./bower_components/angular-animate/angular-animate.js"></script>
   <script src="./bower_components/angular-bootstrap/ui-bootstrap.js"></script>
   <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
