Fixed bug with browsersync and inject

--- a/yadaApp/index.html
+++ b/yadaApp/index.html
@@ -11,7 +11,7 @@
     <!-- endbower -->
     
     <!-- inject:css -->
-    <link rel="stylesheet" href="yadaApp/css/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <!-- endinject -->
   </head>
   <body ng-controller="mainCtrl">
@@ -36,20 +36,19 @@
   <!-- bower:js -->
   <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angularjs/angular.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/angular-animate/angular-animate.js"></script>
   <!-- endbower -->
   
   <!-- inject:js -->
-  <script src="yadaApp/yadaApp.js"></script>
-  <script src="yadaApp/common/common.js"></script>
-  <script src="yadaApp/js/controllers.js"></script>
-  <script src="yadaApp/js/services.js"></script>
-  <script src="yadaApp/common/directives/alerts.js"></script>
-  <script src="yadaApp/common/services/alerting.js"></script>
-  <script src="yadaApp/js/services/api.js"></script>
-  <script src="yadaApp/js/services/utils.js"></script>
+  <script src="yadaApp.js"></script>
+  <script src="common/common.js"></script>
+  <script src="js/controllers.js"></script>
+  <script src="js/services.js"></script>
+  <script src="common/directives/alerts.js"></script>
+  <script src="common/services/alerting.js"></script>
+  <script src="js/services/api.js"></script>
+  <script src="js/services/utils.js"></script>
   <!-- endinject -->
 </html>
