--- a/yadaApp/index.html
+++ b/yadaApp/index.html
@@ -8,6 +8,7 @@
 
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.css" />
     <!-- endbower -->
     
     <!-- inject:css -->
