Adds form validation to test dates and reminders add/edit forms

--- a/yadaApp/index.html
+++ b/yadaApp/index.html
@@ -45,6 +45,8 @@
   <script src="commonUtil/commonUtil.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
+  <script src="js/directives.js"></script>
+  <script src="js/directives/show-errors.js"></script>
   <script src="commonUtil/services/notifier.js"></script>
   <script src="js/services/api.js"></script>
   <script src="js/services/utils.js"></script>
