--- a/client/root/index.html
+++ b/client/root/index.html
@@ -39,7 +39,7 @@
               <label for="submissionDate">Submission Date for Application</label>
               <p class="input-group">
                 <input type="text" class="form-control" datepicker-popup={{format}}
-                       ng-model="formData.dt" is-open="$parent.opened" min-date="minDate"
+                       ng-model="formData.dt" is-open="opened" min-date="minDate"
                        datepicker-options="dateOptions" required
                        close-text="Close" />
                 <span class="input-group-btn">
