--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en" ng-app="yg-admin">
+<html class="no-js" lang="en" ng-app="yg.admin">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
