--- a/client/root/index.html
+++ b/client/root/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en" ng-app="yg-root">
+<html class="no-js" lang="en" ng-app="yg.root">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
