--- a/client/root/index.html
+++ b/client/root/index.html
@@ -98,6 +98,8 @@
   <script src="/common/services/utilsService.js"></script>
   <script src="/common/services/notifierService.js"></script>
   <script src="app.js"></script>
+  <script src="services.js"></script>
+  <script src="services/reminderService.js"></script>
   <script src="rootController.js"></script>
   <!-- endinject -->
 </html>
