--- a/client/login/index.html
+++ b/client/login/index.html
@@ -25,7 +25,7 @@
       <![endif]-->
     <form ng-hide="identityService.isAuthenticated()">
       <div class="form-group">
-        <input type="text" placeholder="Email"
+        <input type="text" placeholder="Username"
                ng-model="username" class="form-control">
       </div>
       <div class="form-group">
