--- a/client/login/index.html
+++ b/client/login/index.html
@@ -8,12 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Place favicon.ico in the root directory -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/vendor/toastr/toastr.css" />
     <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="/vendor/angular-toastr/dist/angular-toastr.css" />
     <!-- endbower -->
     <!-- inject:css -->
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="/css/main.css">
     <!-- endinject -->
   </head>
 
@@ -23,25 +24,34 @@
             <strong>outdated</strong> browser. Please
             <a href="http://browsehappy.com/"> upgrade your browser</a> to improve your experience.</p>
       <![endif]-->
-    <form ng-hide="identityService.isAuthenticated()">
-      <div class="form-group">
-        <input type="text" placeholder="Username"
-               ng-model="username" class="form-control">
+    <div class="container">
+      <div class="jumbotron">
+        <form ng-hide="identityService.isAuthenticated()">
+          <div class="form-group">
+            <input type="text" placeholder="Username" ng-model="username" class="form-control">
+          </div>
+          <div class="form-group">
+            <input type="password" placeholder="Password" ng-model="password" class="form-control" ng-keyup="$event.keyCode == 13 ? signin() : null">
+          </div>
+          <button type="button" class="btn btn-primary" ng-click="signin()">
+            Sign In
+          </button>
+        </form>
+        <div ng-cloak ng-show="identityService.isAuthenticated()">
+          <div class="row">
+            Hello, {{identityService.currentUser.username}}!
+          </div>
+          <br />
+          <div class="row">
+            <a class="btn btn-default" href="/admin/">Admin</a>
+          </div>
+          <br />
+          <div class="row">
+            <a class="btn btn-danger" href="" ng-click="signout()">Sign Out</a>
+          </div>
+        </div>
       </div>
-      <div class="form-group">
-        <input type="password" placeholder="Password"
-               ng-model="password" class="form-control">
-      </div>
-      <button type="button" class="btn btn-primary" ng-click="signin(username, password)">
-        Sign In
-      </button>
-    </form>
-    <div ng-show="identityService.isAuthenticated()">
-      {{identityService.currentUser.username}}
-      <a href="/admin/">Admin</a>
-      <a href="" ng-click="signout()">Sign Out</a>
     </div>
-
     <!-- bower:js -->
     <script src="/vendor/modernizr/modernizr.js"></script>
     <script src="/vendor/jquery/dist/jquery.js"></script>
