--- a/client/root/index.html
+++ b/client/root/index.html
@@ -13,6 +13,9 @@
     <link rel="stylesheet" href="/vendor/angular-toastr/dist/angular-toastr.css" />
     <!-- endbower -->
 
+    <!-- Google Font Link -->
+    <link href='http://fonts.googleapis.com/css?family=Graduate|Rock+Salt' rel='stylesheet' type='text/css'>
+
     <!-- inject:css -->
     <link rel="stylesheet" href="css/main.css">
     <!-- endinject -->
