Fixed bootstrap jumbotron color issue (imposed new class)

--- a/client/root/index.html
+++ b/client/root/index.html
@@ -30,7 +30,7 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="jumbotron clearfix" id="reminderForms">
+        <div class="jumbotron clearfix reminder-box" id="reminderForms">
           <form name="reminderForm" novalidate>
             <div class="form-group">
               <label for="schoolName">College/University Name</label>
