--- a/client/root/index.html
+++ b/client/root/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="css/main.css">
     <!-- endinject -->
   </head>
-  <body ng-controller="RootController">
+  <body class="root-body" ng-controller="RootController">
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
