Refactors controllers. Adds admin faq controller

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -71,7 +71,10 @@
   <script src="/common/services/utilsService.js"></script>
   <script src="/common/services/notifierService.js"></script>
   <script src="app.js"></script>
-  <script src="adminController.js"></script>
+  <script src="admin-controller.js"></script>
+  <script src="controllers/reminders.js"></script>
+  <script src="controllers/test-dates.js"></script>
+  <script src="controllers/faqs.js"></script>
   <script src="directives.js"></script>
   <script src="directives/show-errors.js"></script>
   <!-- endinject -->
