--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -37,6 +37,7 @@
           <ul class="nav navbar-nav">
             <li ng-class="currentTab === '/reminders' ? 'active' : ''"><a ui-sref="reminders">Reminders</a></li>
             <li ng-class="currentTab === '/test-dates' ? 'active' : ''"><a ui-sref="test-dates">Test Dates</a></li>
+            <li ng-class="currentTab === '/faqs' ? 'active' : ''"><a ui-sref="faqs">Faqs</a></li>
           </ul>
           <p class="navbar-text navbar-right">
             Signed in as <a ui-sref="admin.test-dates" class ="navbar-link">Test User</a> <a href="#/" class="navbar-link">(Sign-Out)</a>
