Adds textAngular elements to FAQ

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="/vendor/toastr/toastr.css" />
     <link rel="stylesheet" href="/vendor/angular-toastr/dist/angular-toastr.css" />
+    <link rel="stylesheet" href="/vendor/textAngular/dist/textAngular.css" />
     <!-- endbower -->
 
     <!-- inject:css -->
@@ -60,6 +61,9 @@
   <script src="/vendor/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/vendor/angular-toastr/dist/angular-toastr.tpls.js"></script>
   <script src="/vendor/angular-resource/angular-resource.js"></script>
+  <script src="/vendor/textAngular/dist/textAngular-rangy.min.js"></script>
+  <script src="/vendor/textAngular/dist/textAngular-sanitize.min.js"></script>
+  <script src="/vendor/textAngular/dist/textAngular.min.js"></script>
   <!-- endbower -->
 
   <!-- inject:js -->
