Makes FAQ editor functional

--- a/client/login/index.html
+++ b/client/login/index.html
@@ -72,7 +72,7 @@
     <script src="/common/services/utilsService.js"></script>
     <script src="/common/services/notifierService.js"></script>
     <script src="app.js"></script>
-    <script src="/login/loginController.js"></script>
+    <script src="/login/login-controller.js"></script>
     <!-- endinject -->
   </body>
 
