--- a/client/root/index.html
+++ b/client/root/index.html
@@ -104,6 +104,6 @@
   <script src="app.js"></script>
   <script src="services.js"></script>
   <script src="services/reminderService.js"></script>
-  <script src="rootController.js"></script>
+  <script src="root-controller.js"></script>
   <!-- endinject -->
 </html>
