--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -32,17 +32,18 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="admin">YadaGuru Admin Panel</a>
+          <a class="navbar-brand" ui-sref="reminders">YadaGuru Admin Panel</a>
         </div>
         <div class="collapse navbar-collapse" id="navbar-collapse">
           <ul class="nav navbar-nav">
             <li ng-class="currentTab === '/reminders' ? 'active' : ''"><a ui-sref="reminders">Reminders</a></li>
             <li ng-class="currentTab === '/test-dates' ? 'active' : ''"><a ui-sref="test-dates">Test Dates</a></li>
-            <li ng-class="currentTab === '/faqs' ? 'active' : ''"><a ui-sref="faqs">Faqs</a></li>
+            <li ng-class="currentTab === '/faqs' ? 'active' : ''"><a ui-sref="faqs">FAQs</a></li>
           </ul>
-          <p class="navbar-text navbar-right">
-            Signed in as <a ui-sref="admin.test-dates" class ="navbar-link">Test User</a> <a href="#/" class="navbar-link">(Sign-Out)</a>
-          </p>
+          <!-- uncomment below when functionality is ready -->
+          <!--<p class="navbar-text navbar-right">-->
+            <!--Signed in as <a ui-sref="admin.test-dates" class ="navbar-link">Test User</a> <a href="#/" class="navbar-link">(Sign-Out)</a>-->
+          <!--</p>-->
         </div>
       </div>
     </nav>
