Added Code for Philly logo to index page

--- a/client/root/index.html
+++ b/client/root/index.html
@@ -24,7 +24,15 @@
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div class="page-header no-bottom-border">
+
+    <div class="image-wrapper">
+      <h3>Brought to you by</h3>
+    <img src="/assets/CFPLogo.png" class="img-responsive logo" alt="Brought to you by Code for Philly" />
+
+      </div>
+<!-- Code for Philly Logo -->
+
+    <div class="page-header no-bottom-border" align="center">
       <h1 class="text-center">YadaGuru</h1>
       <h2 class="text-center">College Application Reminders</h2>
     </div>
