--- a/client/root/index.html
+++ b/client/root/index.html
@@ -39,6 +39,19 @@
     <div ui-view></div>
   </body>
 
+  <!-- Google Analytics -->
+  <script>
+   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+   ga('create', 'UA-62599711-1', 'auto');
+   ga('send', 'pageview');
+
+  </script>
+  <!-- End Google Analytics -->
+
   <!-- bower:js -->
   <script src="/vendor/jquery/dist/jquery.js"></script>
   <script src="/vendor/angular/angular.js"></script>
