Fixed static CfP logo and made responsive to screen size

--- a/client/root/index.html
+++ b/client/root/index.html
@@ -24,12 +24,9 @@
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-    <div class="image-wrapper">
-      <h3>Brought to you by</h3>
-    <img src="/assets/CFPLogo.png" class="img-responsive logo" alt="Brought to you by Code for Philly" />
-
-      </div>
+  <div class="col-xs-2 col-sm-2 col-lg-2">
+    <img src="/assets/CFPLogo.png" class="logo" alt="Brought to you by Code for Philly" />
+  </div>
 <!-- Code for Philly Logo -->
 
     <div class="page-header no-bottom-border" align="center">
