--- a/client/root/index.html
+++ b/client/root/index.html
@@ -24,16 +24,19 @@
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-  <div class="col-xs-2 col-sm-2 col-lg-2">
-    <img src="/assets/CFPLogo.png" class="logo" alt="Brought to you by Code for Philly" />
-  </div>
-<!-- Code for Philly Logo -->
+
 
     <div class="page-header no-bottom-border" align="center">
       <h1 class="text-center">YadaGuru</h1>
       <h2 class="text-center">College Application Reminders</h2>
     </div>
     <div ui-view></div>
+
+    <div class="col-xs-3 col-sm-2 col-lg-2">
+      <h3 align="left"> Made with love by</h3>
+      <img src="/assets/CFPLogo.png" class="logo" alt="Brought to you by Code for Philly" />
+    </div>
+    <!-- Code for Philly Logo -->
   </body>
 
   <!-- Google Analytics -->
