--- a/client/root/index.html
+++ b/client/root/index.html
@@ -61,6 +61,7 @@
   <script src="/vendor/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/vendor/angular-toastr/dist/angular-toastr.tpls.js"></script>
   <script src="/vendor/angular-resource/angular-resource.js"></script>
+  <script src="/vendor/textAngular/dist/textAngular-sanitize.min.js"></script>
   <!-- endbower -->
 
   <!-- inject:js -->
@@ -74,6 +75,7 @@
   <script src="/common/services/notifierService.js"></script>
   <script src="app.js"></script>
   <script src="services.js"></script>
+  <script src="filters.js"></script>
   <script src="services/reminderService.js"></script>
   <script src="root-controller.js"></script>
   <!-- endinject -->
