Creates view and controller for settings admin page

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -41,6 +41,7 @@
             <li ng-class="currentTab === '/test-dates' ? 'active' : ''"><a ui-sref="test-dates">Test Dates</a></li>
             <li ng-class="currentTab === '/test-messages' ? 'active' : ''"><a ui-sref="test-messages">Test Messages</a></li>
             <li ng-class="currentTab === '/faqs' ? 'active' : ''"><a ui-sref="faqs">FAQs</a></li>
+            <li ng-class="currentTab === '/settings' ? 'active' : ''"><a ui-sref="settings">Settings</a></li>
           </ul>
           <!-- uncomment below when functionality is ready -->
           <!--<p class="navbar-text navbar-right">-->
@@ -85,6 +86,7 @@
   <script src="controllers/test-messages.js"></script>
   <script src="controllers/faqs.js"></script>
   <script src="controllers/categories.js"></script>
+  <script src="controllers/settings.js"></script>
   <script src="directives.js"></script>
   <script src="directives/show-errors.js"></script>
   <!-- endinject -->
