Adds rich text editors reminder edit detail fields. Changes layout of edit reminders form

--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="../css/main.css">
     <!-- endinject -->
   </head>
-  <body ng-controller="AdminController">
+  <body ng-controller="AdminController" class="admin">
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -62,6 +62,7 @@
   <script src="/vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/vendor/angular-animate/angular-animate.js"></script>
   <script src="/vendor/toastr/toastr.js"></script>
+  <script src="/vendor/bootstrap/js/tab.js"></script>
   <script src="/vendor/angular-ui-router/release/angular-ui-router.js"></script>
   <script src="/vendor/angular-toastr/dist/angular-toastr.tpls.js"></script>
   <script src="/vendor/angular-resource/angular-resource.js"></script>
