Added iCal service and tests

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -84,6 +84,7 @@
   <script src="/common/services/apiService.js"></script>
   <script src="/common/services/utilsService.js"></script>
   <script src="/common/services/notifierService.js"></script>
+  <script src="/common/services/iCalService.js"></script>
   <script src="app.js"></script>
   <script src="services.js"></script>
   <script src="filters.js"></script>
