--- a/client/public/index.html
+++ b/client/public/index.html
@@ -33,20 +33,32 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-6 col-sm-3 col-md-3">
-            <h3 class="text-muted absolute-center">Made with love by </h3>
+            <h3 class="text-muted">Made with love by </h3>
           </div>
           <div class="col-xs-6 col-sm-3 col-md-2">
-            <a href="https://codeforphilly.org/" class="absolute-center">
+            <a href="https://codeforphilly.org/">
               <img src="/assets/CFPLogo.png" class="logo" alt="Brought to you by Code for Philly" />
             </a>
           </div>
           <div class="hidden-xs col-sm-3 col-md-3 col-md-offset-2">
-            <h3 class="text-muted absolute-center">Contribute on Github!</h3>
+            <h3 class="text-muted">Contribute on Github!</h3>
           </div>
           <div class="hidden-xs col-sm-3 col-md-2">
-            <a class="absolute-center" href="https://github.com/yadaguru/yadaguru-app">
+            <a href="https://github.com/yadaguru/yadaguru-app">
               <i class="fa fa-github fa-9"></i>
             </a>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <p class="small text-center disclaimer">
+              <strong>DISCLAIMER:</strong> All dates on this site are approximate and reflect the best practice cadence of dates 
+              for a <em>Regular Decision</em> type application. This means that ultimately you the student are responsible for
+              knowing dates and that you should use another method if you are applying early decision, early acceptance or 
+              anything other than Regular Decision. Also, if you are very late in the process, for example, using Yadaguru one 
+              month before a submission date, Yadaguru will display dates by which actions should have been taken in the past. 
+              To understand the different types of admission, please see our <a ui-sref="faqs">FAQ</a> page.
+            </p>
           </div>
         </div>
       </div>
