Adjusted header to be flush with panelbox

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,11 +22,15 @@
     <![endif]-->
 
 
-    <div class="page-header no-bottom-border" align="center">
-      <img src="/assets/yg-masthead.png" alt="YadaGuru: College Application Reminders"
-           title="YadaGuru: College Application Reminders" class="large-logo">
-      <img src="/assets/yg-square.png" alt="YadaGuru: College Application Reminders"
-           title="YadaGuru: College Application Reminders" class="small-logo">
+    <div class="container">
+      <div class="row">
+        <div class="page-header no-bottom-border col-sm-6 col-sm-offset-3" align="center">
+          <img src="/assets/yg-masthead.png" alt="YadaGuru: College Application Reminders"
+               title="YadaGuru: College Application Reminders" class="large-logo">
+          <img src="/assets/yg-square.png" alt="YadaGuru: College Application Reminders"
+               title="YadaGuru: College Application Reminders" class="small-logo">
+        </div>
+      </div>
     </div>
     <div ui-view></div>
 
