--- a/client/public/index.html
+++ b/client/public/index.html
@@ -67,6 +67,7 @@
   <!-- End Google Analytics -->
 
   <script src="/vendor/jquery/dist/jquery.js"></script>
+  <script src="/vendor/file-saver.js/FileSaver.js"></script>
   <script src="/vendor/angular/angular.js"></script>
   <script src="/vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/vendor/toastr/toastr.js"></script>
@@ -74,6 +75,7 @@
   <script src="/vendor/angular-toastr/dist/angular-toastr.tpls.js"></script>
   <script src="/vendor/angular-resource/angular-resource.js"></script>
   <script src="/vendor/textAngular/dist/textAngular-sanitize.min.js"></script>
+  <script src="/vendor/angular-file-saver/dist/angular-file-saver.min.js"></script>
   <script src="/vendor/angular-animate/angular-animate.js"></script>
 
   <script src="/common/app.js"></script>
