Redesign of reminders to support html -> PDF; Save as PDF first pass

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
     <![endif]-->
 
 
-    <div class="page-header no-bottom-border" align="center">
+    <div id="header" class="page-header no-bottom-border" align="center">
       <h1 class="text-center">YadaGuru</h1>
       <h2 class="text-center">College Application Reminders</h2>
     </div>
@@ -40,10 +40,10 @@
               <img src="/assets/CFPLogo.png" class="logo" alt="Brought to you by Code for Philly" />
             </a>
           </div>
-          <div class="hidden-xs col-sm-3 col-md-3 col-md-offset-2">
+          <div id="github-text" class="hidden-xs col-sm-3 col-md-3 col-md-offset-2">
             <h3 class="text-muted absolute-center">Contribute on Github!</h3>
           </div>
-          <div class="hidden-xs col-sm-3 col-md-2">
+          <div id="github-logo" class="hidden-xs col-sm-3 col-md-2">
             <a class="absolute-center" href="https://github.com/yadaguru/yadaguru-app">
               <i class="fa fa-github fa-9"></i>
             </a>
@@ -68,6 +68,7 @@
 
   <script src="/vendor/jquery/dist/jquery.js"></script>
   <script src="/vendor/file-saver.js/FileSaver.js"></script>
+  <script src="/vendor/jspdf/dist/jspdf.min.js"></script>
   <script src="/vendor/angular/angular.js"></script>
   <script src="/vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/vendor/toastr/toastr.js"></script>
