--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" 
+          <button type="button" class="navbar-toggle collapsed"
                   data-toggle="collapse" data-target="#navbar-collapse">
             <span class="sr-only">Toggle Navigation</span>
             <span class="icon-bar"></span>
@@ -80,6 +80,8 @@
   <script src="/common/services/apiService.js"></script>
   <script src="/common/services/utilsService.js"></script>
   <script src="/common/services/notifierService.js"></script>
+  <script src="/common/services/iCalService.js"></script>
+  <script src="/common/services/pdfService.js"></script>
   <script src="app.js"></script>
   <script src="admin-controller.js"></script>
   <script src="controllers/reminders.js"></script>
