--- a/client/public/index.html
+++ b/client/public/index.html
@@ -102,9 +102,11 @@
   <script src="/common/services/apiService.js"></script>
   <script src="/common/services/utilsService.js"></script>
   <script src="/common/services/notifierService.js"></script>
+  <script src="/common/services/googleCalendarService.js"></script>
   <script src="app.js"></script>
   <script src="services.js"></script>
   <script src="filters.js"></script>
   <script src="services/reminderService.js"></script>
   <script src="root-controller.js"></script>
+  <script src="https://apis.google.com/js/client.js"></script>
 </html>
