--- a/client/public/index.html
+++ b/client/public/index.html
@@ -86,7 +86,7 @@
 
   <script src="/vendor/jquery/dist/jquery.js"></script>
   <script src="/vendor/file-saver.js/FileSaver.js"></script>
-  <script src="/vendor/jspdf/dist/jspdf.min.js"></script>
+  <script src="/vendor/jspdf/dist/jspdf.debug.js"></script>
   <script src="/vendor/angular/angular.js"></script>
   <script src="/vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/vendor/toastr/toastr.js"></script>
