Replaced jsPDF with pdfmake

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -86,7 +86,8 @@
 
   <script src="/vendor/jquery/dist/jquery.js"></script>
   <script src="/vendor/file-saver.js/FileSaver.js"></script>
-  <script src="/vendor/jspdf/dist/jspdf.debug.js"></script>
+  <script src="/vendor/pdfmake/build/pdfmake.js"></script>
+  <script src="/vendor/pdfmake/build/vfs_fonts.js"></script>
   <script src="/vendor/angular/angular.js"></script>
   <script src="/vendor/angular-bootstrap/ui-bootstrap-tpls.js"></script>
   <script src="/vendor/toastr/toastr.js"></script>
@@ -105,6 +106,7 @@
   <script src="/common/services/apiService.js"></script>
   <script src="/common/services/utilsService.js"></script>
   <script src="/common/services/notifierService.js"></script>
+  <script src="/common/services/iCalService.js"></script>
   <script src="app.js"></script>
   <script src="services.js"></script>
   <script src="filters.js"></script>
