--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en" ng-app="yg.root">
+<html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -97,21 +97,7 @@
   <script src="/vendor/textAngular/dist/textAngular-sanitize.min.js"></script>
   <script src="/vendor/angular-file-saver/dist/angular-file-saver.min.js"></script>
   <script src="/vendor/angular-animate/angular-animate.js"></script>
-
-  <script src="/dist/common/app.js"></script>
-  <script src="/dist/common/services.js"></script>
-  <script src="/dist/common/services/authService.js"></script>
-  <script src="/dist/common/services/identityService.js"></script>
-  <script src="/dist/common/services/userService.js"></script>
-  <script src="/dist/common/services/apiService.js"></script>
-  <script src="/dist/common/services/utilsService.js"></script>
-  <script src="/dist/common/services/notifierService.js"></script>
-  <script src="/dist/app.js"></script>
-  <script src="/dist/services.js"></script>
-  <script src="/dist/filters.js"></script>
-  <script src="/dist/services/reminderService.js"></script>
-  <script src="/dist/services/googleCalendarService.js"></script>
-  <script src="/dist/services/iCalService.js"></script>
-  <script src="/dist/root-controller.js"></script>
   <script src="https://apis.google.com/js/client.js"></script>
+
+  <script src="/vendor/requirejs/require.js" data-main="/dist/main.js"></script>
 </html>
