Routing by convention

--- a/src/home/home.html
+++ b/src/home/home.html
@@ -68,7 +68,7 @@
             </div>
           </div>
         </form>
-        <p class="text-center space-before">Before submitting, please read our <strong><a ui-sref="faqs">Frequently Asked Questions</a></strong></p>
+        <p class="text-center space-before">Before submitting, please read our <strong><a href="/#/faqs">Frequently Asked Questions</a></strong></p>
       </div>
     </div>
   </div>
