--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div ui-view></div>
+    <div ng-view></div>
 
     <!-- Code for Philly Logo -->
     <footer class="footer">
@@ -95,6 +95,7 @@
   <script src="/vendor/angular-toastr/dist/angular-toastr.tpls.js"></script>
   <script src="/vendor/angular-resource/angular-resource.js"></script>
   <script src="/vendor/textAngular/dist/textAngular-sanitize.min.js"></script>
+  <script src="/vendor/angular-route/angular-route.min.js"></script>
   <script src="/vendor/angular-file-saver/dist/angular-file-saver.min.js"></script>
   <script src="/vendor/angular-animate/angular-animate.js"></script>
   <script src="https://apis.google.com/js/client.js"></script>
