Admin routes, refactor to ui-router

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div ng-view></div>
+    <div ui-view></div>
 
     <!-- Code for Philly Logo -->
     <footer class="footer">
