--- a/index.html
+++ b/index.html
@@ -100,5 +100,7 @@
   <script src="/vendor/angular-animate/angular-animate.js"></script>
   <script src="https://apis.google.com/js/client.js"></script>
 
+  <script src="/dist/ngConstants.js"></script>
+
   <script src="/vendor/requirejs/require.js" data-main="/dist/main.js"></script>
 </html>
