--- a/index.html
+++ b/index.html
@@ -10,66 +10,61 @@
     <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="/vendor/toastr/toastr.css" />
     <link rel="stylesheet" href="/vendor/angular-toastr/dist/angular-toastr.css" />
-
-    <!-- Google Font Link -->
-    <link href='http://fonts.googleapis.com/css?family=Graduate|Rock+Salt' rel='stylesheet' type='text/css'>
-
     <link rel="stylesheet" href="/dist/styles/main.css">
+
   </head>
   <body class="root" ng-controller="RootController">
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
-
     <div class="container">
       <div class="row">
-        <div class="page-header no-bottom-border col-sm-6 col-sm-offset-3" align="center">
-          <img src="/assets/yg-masthead.png" alt="YadaGuru: College Application Reminders"
-               title="YadaGuru: College Application Reminders" class="large-logo">
-          <img src="/assets/yg-square.png" alt="YadaGuru: College Application Reminders"
-               title="YadaGuru: College Application Reminders" class="small-logo">
+        <div class="col-sm-4 col-sm-offset-4">
+          <header>
+            <div class="row panel">
+              <div class="col-xs-2 no-padding">
+                <img src="/assets/yg-square.png" alt="YadaGuru: College Application Reminders"
+                     title="YadaGuru: College Application Reminders" class="small-logo">
+              </div>
+              <div class="col-xs-8 no-padding">
+                <h1>My Reminders</h1>
+              </div>
+              <div class="col-xs-2 no-padding">
+                <a href="https://codeforphilly.org/">
+                  <img src="/assets/CFPLogo.png" class="logo" alt="Brought to you by Code for Philly" />
+                </a>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-xs-2 col-xs-offset-10">
+                <i class="fa fa-question-circle"></i>
+              </div>
+            </div>
+          </header>
+          <div ui-view></div>
+          <footer>
+            <div class="row panel">
+              <div class="col-xs-6 col-xs-offset-3">
+                <i class="fa fa-clock-o"></i>
+                <i class="fa fa-comment-o"></i>
+              </div>
+              <div class="col-xs-3">
+                <i class="fa fa-plus"></i>
+              </div>
+            </div>
+            <div class="row">
+              <div class="footer-links col-xs-12">
+                <a href="#">Privacy Policy</a> |
+                <a href="#">About YadaGuru</a> |
+                <a href="#">Disclaimer</a>
+              </div>
+            </div>
+          </footer>
         </div>
       </div>
     </div>
-    <div ui-view></div>
 
-    <!-- Code for Philly Logo -->
-    <footer class="footer">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs-6 col-sm-3 col-md-3">
-            <h3 class="text-muted">Made with love by </h3>
-          </div>
-          <div class="col-xs-6 col-sm-3 col-md-2">
-            <a href="https://codeforphilly.org/">
-              <img src="/assets/CFPLogo.png" class="logo" alt="Brought to you by Code for Philly" />
-            </a>
-          </div>
-          <div class="hidden-xs col-sm-3 col-md-3 col-md-offset-2">
-            <h3 class="text-muted">Contribute on Github!</h3>
-          </div>
-          <div class="hidden-xs col-sm-3 col-md-2">
-            <a href="https://github.com/yadaguru/yadaguru-app">
-              <i class="fa fa-github fa-9"></i>
-            </a>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p class="small text-center disclaimer">
-              <strong>DISCLAIMER:</strong> All dates on this site are approximate and reflect the best practice cadence of dates
-              for a <em>Regular Decision</em> type application. This means that ultimately you the student are responsible for
-              knowing dates and that you should use another method if you are applying early decision, early acceptance or
-              anything other than Regular Decision. Also, if you are very late in the process, for example, using Yadaguru one
-              month before a submission date, Yadaguru will display dates by which actions should have been taken in the past.
-              To understand the different types of admission, please see our <a ui-sref="faqs">FAQ</a> page.
-            </p>
-          </div>
-        </div>
-      </div>
-    </footer>
-  </body>
+
 
   <!-- Google Analytics -->
   <script>
