--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/vendor/font-awesome/css/font-awesome.css" />
     <link rel="stylesheet" href="/vendor/toastr/toastr.css" />
     <link rel="stylesheet" href="/vendor/angular-toastr/dist/angular-toastr.css" />
+    <link rel="stylesheet" href="/vendor/bootstrap-switch/dist/css/bootstrap2/bootstrap-switch.min.css" />
     <link rel="stylesheet" href="/dist/styles/main.css">
 
   </head>
@@ -93,6 +94,8 @@
   <script src="/vendor/angular-route/angular-route.min.js"></script>
   <script src="/vendor/angular-file-saver/dist/angular-file-saver.min.js"></script>
   <script src="/vendor/angular-animate/angular-animate.js"></script>
+  <script src="/vendor/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
+  <script src="/vendor/angular-bootstrap-switch/dist/angular-bootstrap-switch.min.js"></script>
   <script src="https://apis.google.com/js/client.js"></script>
 
   <script src="/dist/ngConstants.js"></script>
