--- a/src/schools/schools.html
+++ b/src/schools/schools.html
@@ -1,11 +1,28 @@
-<main>
-<p>Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Phasellus a est. Quisque rutrum. Donec id justo. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
-
-Sed lectus. Sed in libero ut nibh placerat accumsan. Maecenas ullamcorper, dui et placerat feugiat, eros pede varius nisi, condimentum viverra felis nunc et lorem. Proin viverra, ligula sit amet ultrices semper, ligula arcu tristique sapien, a accumsan nisi mauris ac eros. Duis leo.
-
-Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Fusce id purus. Aenean ut eros et nisl sagittis vestibulum. Maecenas egestas arcu quis ligula mattis placerat. Pellentesque dapibus hendrerit tortor.
-
-Vestibulum facilisis, purus nec pulvinar iaculis, ligula mi congue nunc, vitae euismod ligula urna in dolor. Aliquam lobortis. Nunc nec neque. Ut a nisl id ante tempus hendrerit. Duis arcu tortor, suscipit eget, imperdiet nec, imperdiet iaculis, ipsum.
-
-Suspendisse non nisl sit amet velit hendrerit rutrum. Fusce ac felis sit amet ligula pharetra condimentum. In ut quam vitae odio lacinia tincidunt. Nam ipsum risus, rutrum vitae, vestibulum eu, molestie vel, lacus. Morbi nec metus.</p>
+<main class="row schools">
+  <div class="col-xs-12">
+    <div class="row">
+      <div class="col-xs-12 nav-links">
+        <a href="#">View by Date</a> |
+        <a href="#">View by School</a>
+      </div>
+    </div>
+    <div ng-repeat="school in schools">
+      <div class="row panel school" ng-class="{active: school.isActive}">
+        <div class="col-xs-7">
+          <h2>{{ school.name }}</h2>
+          <h3>{{ school.dueDate }}</h3>
+        </div>
+        <div class="col-xs-5">
+          <div class="action-container">
+            <i class="fa fa-calendar"></i>
+            <i class="fa fa-file-o"></i>
+            <i class="fa fa-trash-o"></i>
+          </div>
+          <div class="switch-container">
+            <input bs-switch type="checkbox" ng-model="school.isActive">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
