Creates the first four onboarding steps for new users

--- a/src/school/school.html
+++ b/src/school/school.html
@@ -1,3 +1,4 @@
+<onboarding ng-if="isOnboarding"></onboarding>
 <main class="row school-view">
   <div class="col-xs-12">
     <nav-links></nav-links>
