--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
   <script src="/vendor/angular-route/angular-route.min.js"></script>
   <script src="/vendor/angular-file-saver/dist/angular-file-saver.min.js"></script>
   <script src="/vendor/angular-animate/angular-animate.js"></script>
+  <script src="/vendor/angular-touch/angular-touch.min.js"></script>
   <script src="/vendor/bootstrap-switch/dist/js/bootstrap-switch.min.js"></script>
   <script src="/vendor/angular-bootstrap-switch/dist/angular-bootstrap-switch.min.js"></script>
   <script src="https://apis.google.com/js/client.js"></script>
