Replaces progress bar with custom progress dots directive

--- a/src/directives/onboarding.html
+++ b/src/directives/onboarding.html
@@ -22,7 +22,7 @@
   </div>
   <div class="row ob-progress">
     <div class="col-xs-12">
-      <progressbar value="obProgress"></progressbar>
+      <progress-dots max="5" value="obStep" class="progress-dots"></progress-dots>
     </div>
   </div>
 </div>
